--- a/index.html
+++ b/index.html
@@ -45,8 +45,7 @@
   <!-- End of Main Section -->
   <!-- Footer Section -->
   <footer class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"> Frontend Mentor</a>.
-    Coded by <a href="#">brystnc</a>.
+    <p>Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"> Frontend Mentor</a>. Coded by <a href="#">brystnc</a>.</p>
   </footer>
   <!-- End of Footer Section -->
 </body>
