--- a/index.html
+++ b/index.html
@@ -9,8 +9,7 @@
 </head>
 <body>
   <!-- Main Section -->
-  <main>
-    <h1></h1>
+  <div class="main">
     <div class="card-profile">
       <!-- User Profile -->
       <div class="profile">
@@ -42,7 +41,7 @@
       </ul>
       <!-- End of User Social Networks -->
     </div>
-  </main>
+  </div>
   <!-- End of Main Section -->
   <!-- Footer Section -->
   <footer class="attribution">
