--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
   <!-- Main Section -->
-  <div class="main">
+  <main>
     <div class="card-profile">
       <!-- User Profile -->
       <div class="profile">
@@ -41,7 +41,7 @@
       </ul>
       <!-- End of User Social Networks -->
     </div>
-  </div>
+  </main>
   <!-- End of Main Section -->
   <!-- Footer Section -->
   <footer class="attribution">
